--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,11 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
+    implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
+    implementation 'com.android.support:support-annotations:28.0.0'
+    implementation 'com.intellij:annotations:12.0@jar'
+    implementation 'androidx.annotation:annotation:1.0.2'
+
+
+
 }
