--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ buildscript {
     repositories {
         jcenter()
         google()
+        mavenCentral()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
@@ -17,6 +19,8 @@ allprojects {
     repositories {
         jcenter()
         google()
+        mavenCentral()
+
     }
 }
 
